<resources>
    <string name="app_name">我的安卓</string>
    <string name="action_settings">Settings</string>
    <string name="action_start_exchange">发起群聊</string>
    <string name="action_add_friend">添加朋友</string>
    <string name="action_scan">扫一扫</string>
    <string name="action_collection_payment">收付款</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">首页</string>
    <string name="second_fragment_label">关于我</string>
    <string name="new_fragment_label">目录页</string>


    <string name="new_to_first">跳转到首页</string>
    <string name="new_to_second">跳转到关于我</string>
    <string name="first_to_new">跳转到目录页</string>
    <string name="second_to_new">跳转到目录页</string>
    <string name="first_to_second">跳转到关于我</string>
    <string name="second_to_first">跳转到首页</string>


    <string name="first_info">首页详情</string>
    <string name="second_info">关于我</string>
    <string name="new_info">目录信息</string>
</resources>