<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android_demo.MainActivity">
    <item
        android:id="@+id/action_start_exchange"
        android:orderInCategory="100"
        android:title="@string/action_start_exchange"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_friend"
        android:orderInCategory="100"
        android:title="@string/action_add_friend"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_scan"
        android:orderInCategory="100"
        android:title="@string/action_scan"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_collection_payment"
        android:orderInCategory="100"
        android:title="@string/action_collection_payment"
        app:showAsAction="never" />
</menu>