<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/LinearLayout_new"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/fab_padding"
        android:background="#98FB98"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/textview_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF00FF"
            android:text="@string/new_info" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/LinearLayout_new2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <Button
                android:id="@+id/btn_new_to_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_to_first" />

            <Button
                android:id="@+id/btn_new_to_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_to_second" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>